--- a/rocketmq-broker/pom.xml
+++ b/rocketmq-broker/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>com.alibaba.rocketmq</groupId>
 		<artifactId>rocketmq-all</artifactId>
-		<version>3.2.6</version>
+		<version>3.2.7</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -60,5 +60,23 @@
 			<groupId>jboss</groupId>
 			<artifactId>javassist</artifactId>
 		</dependency>
+		
+			<dependency>
+				<groupId>com.dianping.cat</groupId>
+				<artifactId>cat-client</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.unidal.framework</groupId>
+				<artifactId>foundation-service</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+			</dependency>      
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+			</dependency>
+			
 	</dependencies>
 </project>
