--- a/rocketmq-store/pom.xml
+++ b/rocketmq-store/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>com.alibaba.rocketmq</groupId>
 		<artifactId>rocketmq-all</artifactId>
-		<version>3.2.6</version>
+		<version>3.2.7</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -16,6 +16,29 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.mongodb</groupId>
+		    <artifactId>mongo-java-driver</artifactId>
+		     <version>2.14.2</version>
+	  </dependency>   		
+	  
+		<dependency>
+			<groupId>com.dianping.cat</groupId>
+			<artifactId>cat-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.unidal.framework</groupId>
+			<artifactId>foundation-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>  	  		
+		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rocketmq-common</artifactId>
