--- a/rocketmq-common/pom.xml
+++ b/rocketmq-common/pom.xml
@@ -21,5 +21,28 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rocketmq-remoting</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.dianping.cat</groupId>
+			<artifactId>cat-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.unidal.framework</groupId>
+			<artifactId>foundation-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>      
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+		</dependency>
+		
+         <dependency>
+             <groupId>ch.qos.logback</groupId>
+             <artifactId>logback-classic</artifactId>
+         </dependency>		
+		
 	</dependencies>
 </project>
