使用授权模式的mongodb 副本集 一定要配置 -Djava.ext.dirs=/home/anders/soft/jdk1.7.0_67/jre/lib/ext

--- a/conf/2m-noslave/broker-a.properties
+++ b/conf/2m-noslave/broker-a.properties
@@ -5,3 +5,13 @@ deleteWhen=04
 fileReservedTime=48
 brokerRole=ASYNC_MASTER
 flushDiskType=ASYNC_FLUSH
+
+msgStoreType=mongo
+mongoRepSetHosts=192.168.56.101:27117,192.168.56.101:27118,192.168.56.101:27119
+mongoDbName=mq_messages
+mongoUser=lusong
+mongoPassword=lusong
+
+jdbcURL=jdbc:mysql://192.168.56.102:3306/mq_messages?useUnicode=true&characterEncoding=UTF-8
+jdbcUser=root
+jdbcPassword=123
