--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,12 @@
             -->
 
 
+	      <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-pmd-plugin</artifactId>
+	        <version>3.6</version>
+	      </plugin>
+
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.1</version>
